# owle-agent

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  render.yaml
backend/app/: agentmail_client.py  apify_leads_client.py  apollo_client.py  calendar_client.py  claude.py  config.py  db.py  gmail.py  hunter_client.py  main.py  supabase_client.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: account_selector.py  learning_updater.py  meeting_booker.py  outreach_generator.py  reply_classifier.py  stakeholder_mapper.py  strategy_decider.py  web_enricher.py
backend/app/routers/: accounts.py  meetings.py  outreach.py  webhooks.py
backend/supabase/migrations/: 001_initial.sql  002_replies_agentmail_message_id.sql  003_meetings_post_flow.sql  004_accounts_outcome_status.sql  005_meetings_notes.sql  006_audit_log_nodes.sql
backend/tests/: conftest.py  test_account_selector.py  test_config.py  test_graph_smoke.py  test_health.py  test_outreach_generator.py  test_reply_classifier.py  test_stakeholder_mapper.py  test_strategy_decider.py  test_supabase_client.py
docs/plans/: 2026-03-18-open-webui-company-categories-design.md  2026-03-18-open-webui-company-categories-plan.md  2026-03-22-feeding-assistance-robot-design.md  2026-03-22-feeding-assistance-robot-plan.md  2026-03-22-feeding-robot-motion-tuning-design.md  2026-03-22-feeding-robot-motion-tuning-plan.md  2026-03-23-ucertify-quiz-agent-design.md  2026-03-23-ucertify-quiz-agent-extension-design.md  (+4 more)
frontend/: .env.local.example  package-lock.json  package.json  proxy.ts
(+44 files in other folders)
