[project]
name = "owle-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    "anthropic>=0.28.0",
    "supabase>=2.4.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.128.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.9",
    "tavily-python>=0.3.0",
    "apify-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
